--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -4,12 +4,12 @@ title: Meeting 1
 
 # Meeting 26/06/25 | 2h
 
-## Scopo
+<div class="grid grid-single" markdown>
 
+> ###:material-target: **Scopo**  
 Scoping meeting
 
-## Scaletta
-
+> ###:material-format-list-numbered: **Scaletta**  
 - nome del progetto
 - definzione dell'opportunità
 - definzione degli stakeholders
@@ -22,23 +22,23 @@ Scoping meeting
 - definizione business values
 - analisi finanziaria
 
-## Partecipanti
+> ###:material-account-group: **Partecipanti**  
+- Filippo G
+- Silvia
+- Luca
+- Filippo P
+- Anny
 
-- Tutto il team
-  - Filippo G
-  - Silvia
-  - Luca
-  - Filippo P
-  - Anny
-
-## Documentazione allegata
-
+> ###:material-paperclip: **Documentazione allegata**  
 Nessuna
+
+</div>
 
 ---
 
-## Note
+<div class="grid grid-single" markdown>
 
+> ###:material-note-text: **Note**  
 **Nome del progetto**  
 Super Chasm Hunter
 
@@ -117,8 +117,6 @@ Prodotto software - videogioco
       3. **Tangibile:** Accesso a promozioni su Steam e future campagne con leva su un primo successo
    2. success criteria(IR): avere un'entrata pari, almeno, a 3600€
 
-### Analisi finanziaria
-
 **Business Model**
 
 Il deliverable sarà pubblicato sulla piattaforma [Steam](https://store.steampowered.com/?l=italian). Questa permette di pubblicizzare e far scaricare il prodotto ai videogiocatori interessati facendogli pagare un prezzo prestabilito. Di questa cifra, Steam trattiene il 30% e il restante viene destinato all'azienda produttrice.
@@ -140,8 +138,7 @@ Date quete premesse si ritiene il progetto *fattibile* per quanto riguarda il pu
 - Il team lavora in modo disomogeneo, c'è chi dedica più ore, chi meno, per il fatto che non è ancora fonte di reddito
 - Il team è composto da persone che conoscono e sono appassionate al mondo dei videogiochi in qualità di clienti
 
-## Decisioni prese
-
+> ###:material-check: **Decisioni prese**  
 - nome progetto
 - goal
 - stakeholders
@@ -152,21 +149,23 @@ Date quete premesse si ritiene il progetto *fattibile* per quanto riguarda il pu
 - analisi finanziaria
 - assunzioni
 
-## Azioni da fare
-
+> ###:material-rocket-launch: **Azioni da fare**  
 Completare lo scoping meeting per decidere il PMLC e procedere alla fase di planning
+
+</div>
 
 ---
 
-## Prossimo meeting
+<div class="grid grid-single" markdown>
 
+> ###:material-calendar: **Prossimo meeting**  &lt;Data&gt; | &lt;Durata&gt;
 27/06/25 | 2h
 
-## Partecipanti prossimo meeting
+> ###:material-account-group: **Partecipanti prossimo meeting**  
+- Filippo G (PM)
+- Silvia (sw eng)
+- Luca (Game designer)
+- Filippo P (art director)
+- Anny (sw eng)
 
-- Tutto il team
-  - Filippo G (PM)
-  - Silvia (sw eng)
-  - Luca (Game designer)
-  - Filippo P (art director)
-  - Anny (sw eng)
+</div>
