test: change meeting style

--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -6,11 +6,13 @@ title: Meeting 1
 
 <div class="grid grid-single" markdown>
 
-> ###:material-target: **Scopo**  
+###:material-target: **Scopo**
+{ .card }
 
 Scoping meeting
 
-> ###:material-format-list-numbered: **Scaletta**  
+###:material-format-list-numbered: **Scaletta**  
+{ .card }
 
 - nome del progetto
 - definzione dell'opportunità
