--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -9,6 +9,9 @@ title: Meeting 1
 ###:material-target: **Scopo**
 { .card }
 
+:fontawesome-brands-html5: __HTML__ for content and structure
+{ .card }
+
 Scoping meeting
 
 ###:material-format-list-numbered: **Scaletta**  
