--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -4,18 +4,11 @@ title: Meeting 1
 
 # Meeting 26/06/25 | 2h
 
-<div class="grid grid-single" markdown>
-
-###:material-target: **Scopo**
-{ .card }
-
-:fontawesome-brands-html5: __HTML__ for content and structure
-{ .card }
+## :material-target: **Scopo**
 
 Scoping meeting
 
-###:material-format-list-numbered: **Scaletta**  
-{ .card }
+## :material-format-list-numbered: **Scaletta**  
 
 - nome del progetto
 - definzione dell'opportunità
@@ -29,7 +22,7 @@ Scoping meeting
 - definizione business values
 - analisi finanziaria
 
-> ###:material-account-group: **Partecipanti**  
+## :material-account-group: **Partecipanti**  
 
 - Filippo G
 - Silvia
@@ -37,17 +30,13 @@ Scoping meeting
 - Filippo P
 - Anny
 
-> ###:material-paperclip: **Documentazione allegata**  
+## :material-paperclip: **Documentazione allegata**  
 
 Nessuna
 
-</div>
-
 ---
 
-<div class="grid grid-single" markdown>
-
-> ###:material-note-text: **Note**  
+## :material-note-text: **Note**  
 
 **Nome del progetto**  
 Super Chasm Hunter
@@ -148,7 +137,7 @@ Date quete premesse si ritiene il progetto *fattibile* per quanto riguarda il pu
 - Il team lavora in modo disomogeneo, c'è chi dedica più ore, chi meno, per il fatto che non è ancora fonte di reddito
 - Il team è composto da persone che conoscono e sono appassionate al mondo dei videogiochi in qualità di clienti
 
-> ###:material-check: **Decisioni prese**  
+## :material-check: **Decisioni prese**  
 
 - nome progetto
 - goal
@@ -160,26 +149,20 @@ Date quete premesse si ritiene il progetto *fattibile* per quanto riguarda il pu
 - analisi finanziaria
 - assunzioni
 
-> ###:material-rocket-launch: **Azioni da fare**  
+## :material-rocket-launch: **Azioni da fare**  
 
 Completare lo scoping meeting per decidere il PMLC e procedere alla fase di planning
 
-</div>
-
 ---
 
-<div class="grid grid-single" markdown>
-
-> ###:material-calendar: **Prossimo meeting**  &lt;Data&gt; | &lt;Durata&gt;
+## :material-calendar: **Prossimo meeting**  &lt;Data&gt; | &lt;Durata&gt;
 
 27/06/25 | 2h
 
-> ###:material-account-group: **Partecipanti prossimo meeting**  
+## :material-account-group: **Partecipanti prossimo meeting**  
 
 - Filippo G (PM)
 - Silvia (sw eng)
 - Luca (Game designer)
 - Filippo P (art director)
 - Anny (sw eng)
-
-</div>
