--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -155,7 +155,7 @@ Completare lo scoping meeting per decidere il PMLC e procedere alla fase di plan
 
 ---
 
-## :material-calendar: **Prossimo meeting**  &lt;Data&gt; | &lt;Durata&gt;
+## :material-calendar: **Prossimo meeting**
 
 27/06/25 | 2h
 
