style: restyle meetings

--- a/docs/Allegati/Meetings/Meeting 2 - 27-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 2 - 27-06-25.md
@@ -4,18 +4,18 @@ title: Meeting 2
 
 # Meeting 27/06/25 | 2h
 
-## Scopo
+## :material-target: Scopo
 
 Scoping meeting
 
-## Scaletta
+## :material-formal-list-numbered: Scaletta
 
 - ostacoli
 - analisi dei rischi
 - RBS
 - PMLC
 
-## Partecipanti
+## :material-account-group: Partecipanti
 
 - Tutto il team 
   - Filippo G
@@ -24,13 +24,13 @@ Scoping meeting
   - Filippo P
   - Anny
 
-## Documentazione allegata
+## :material-paperclip: Documentazione allegata
 
 Meeting 1
 
 ---
 
-## Note
+## :material-note-text: Note
 
 **Ostacoli**
 
@@ -90,23 +90,23 @@ Creare un videogioco con caratteristiche rogue like, rpg e building che permetta
    2. sfruttare gli sconti stagionali
    3. mantenere una community di almeno 2000 membri attivi per almeno 1 anno
 
-## Decisioni prese
+## :material-check: Decisioni prese
 
 - ostacoli
 - analisi dei rischi
 - inizio RBS
 
-## Azioni da fare
+## :material-rocket-launch: Azioni da fare
 
 Completare lo scoping meeting per decidere il PMLC e procedere alla fase di planning
 
 ---
 
-## Prossimo meeting
+## :material-calendar: Prossimo meeting
 
 4/7/25 - 2h
 
-## Partecipanti prossimo meeting
+## :material-account-group: Partecipanti prossimo meeting
 
 - Tutto il team 
   - Filippo G (PM)
