--- a/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
@@ -4,16 +4,16 @@ title: Meeting 3
 
 # Meeting 03/07/25 | 2h
 
-## Scopo
+## :material-target: **Scopo**
 
 scoping meeting
 
-## Scaletta
+## :material-format-list-numbered: **Scaletta** 
 
 - RBS
 - PMLC
 
-## Partecipanti
+## :material-account-group: **Partecipanti**  
 
 - Tutto il team 
   - Filippo G
@@ -22,14 +22,14 @@ scoping meeting
   - Filippo P
   - Anny
 
-## Documentazione allegata
+## :material-paperclip: **Documentazione allegata**  
 
 - meeting 1
 - meeting 2
 
 ---
 
-## Note
+## :material-note-text: **Note**  
 
 **Categorizzazione RBS**
 
@@ -464,12 +464,13 @@ La scelta è dovuta ai seguenti fattori:
 - Obiettivi noti e stabili, ma requisiti instabili o incompleti. 
 - Necessità di apprendere mentre si implementa, approfondendo la conoscenza delle necessità degli stakeholders (prima di tutto quelle relative al team come stakeholder).
 
-## Decisioni prese
+## :material-check: **Decisioni prese**  
 
 - RBS
 - PMLC
 
-## Azioni da fare
+## Azioni ## :material-rocket-launch: **Azioni da fare**  
+da fare
 
 - Valutare se accettare il progetto
   - In caso di conferma: passare al planning
@@ -477,13 +478,13 @@ La scelta è dovuta ai seguenti fattori:
 
 ---
 
-## Prossimo meeting
+## :material-calendar: **Prossimo meeting**
 
 Si salta una settimana per necessità del PM di redigere RBS e POS derivanti dai meeting fatti
 
 17/07/25, 2h
 
-## Partecipanti prossimo meeting
+## :material-account-group: **Partecipanti prossimo meeting**  
 
 - Filippo G (PM)
 - Luca (Game designer)
