--- a/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
@@ -4,31 +4,27 @@ title: Meeting 4
 
 # Meeting 17/07/25 | 2h
 
-## Scopo
+## :material-target: **Scopo**
 
 Joint Planning Meeting
 
-## Scaletta
+## :material-format-list-numbered: **Scaletta**  
 
-## Partecipanti
+## :material-account-group: **Partecipanti**
 
 - Filippo G (PM)
 - Luca (Game designer)
 
-## Documentazione allegata
+## :material-paperclip: **Documentazione allegata**  
 
----
+## :material-note-text: **Note**  
 
-## Note
+## :material-check: **Decisioni prese**  
 
-## Decisioni prese
+## :material-rocket-launch: **Azioni da fare**  
 
-## Azioni da fare
+## :material-calendar: **Prossimo meeting**
 
----
+&lt;Data&gt; | &lt;Durata&gt;
 
-## Prossimo meeting
-
-<data> | <durata>
-
-## Partecipanti prossimo meeting
+## :material-account-group: **Partecipanti prossimo meeting**  
