feat: create meeting 4

--- a/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
@@ -482,7 +482,7 @@ da fare
 
 Si salta una settimana per necessità del PM di redigere RBS e POS derivanti dai meeting fatti
 
-17/07/25, 2h
+17/07/25, 10 min
 
 ## :material-account-group: **Partecipanti prossimo meeting**  
 
