--- a/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
@@ -2,13 +2,15 @@
 title: Meeting 4
 ---
 
-# Meeting 17/07/25 | 2h
+# Meeting 17/07/25 | 10 min
 
 ## :material-target: **Scopo**
 
-Joint Planning Meeting
+Accettare o declinare il progetto
 
 ## :material-format-list-numbered: **Scaletta**  
+
+Accettare o declinare il progetto
 
 ## :material-account-group: **Partecipanti**
 
@@ -17,14 +19,31 @@ Joint Planning Meeting
 
 ## :material-paperclip: **Documentazione allegata**  
 
+- Meeting 1,2,3
+- POS
+- RBS
+
 ## :material-note-text: **Note**  
+
+Date quanto riportato nel POS, che è un estratto di quanto espresso durante le riunioni di Scoping, il progetto si considera accettato. Si può quindi procedere con la fase di planning.
 
 ## :material-check: **Decisioni prese**  
 
+Progetto accettato
+
 ## :material-rocket-launch: **Azioni da fare**  
+
+- Iniziare la fase di planning
 
 ## :material-calendar: **Prossimo meeting**
 
-&lt;Data&gt; | &lt;Durata&gt;
+17/07/25 | 2h
 
 ## :material-account-group: **Partecipanti prossimo meeting**  
+
+Tutto il team
+- Filippo G (PM)
+- Silvia (Sw eng)
+- Luca (Game Designer)
+- Filippo P (Art director)
+- Anny (Sw eng)
