feat: create prefazione

--- a/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 1 - 26-06-25.md
@@ -65,7 +65,7 @@ TO BE
 - nessuna necessità di avere un bliancio positivo
 - durata di gioco almeno di 15 ore
 - raggiungere almeno 5000 wishlist
-- raggiungere almeno 1000 copie vendute
+- raggiungere almeno 700 copie vendute
 
 NICE TO HAVE
 
@@ -161,8 +161,8 @@ Completare lo scoping meeting per decidere il PMLC e procedere alla fase di plan
 
 ## :material-account-group: **Partecipanti prossimo meeting**  
 
-- Filippo G (PM)
-- Silvia (sw eng)
-- Luca (Game designer)
-- Filippo P (art director)
-- Anny (sw eng)
+- Filippo G
+- Silvia
+- Luca
+- Filippo P
+- Anny
