--- a/docs/Allegati/Meetings/Meeting 2 - 27-06-25.md
+++ b/docs/Allegati/Meetings/Meeting 2 - 27-06-25.md
@@ -109,8 +109,8 @@ Completare lo scoping meeting per decidere il PMLC e procedere alla fase di plan
 ## :material-account-group: Partecipanti prossimo meeting
 
 - Tutto il team 
-  - Filippo G (PM)
-  - Silvia (sw eng)
-  - Luca (Game designer)
-  - Filippo P (art director)
-  - Anny (sw eng)
+  - Filippo G
+  - Silvia
+  - Luca
+  - Filippo P
+  - Anny
