--- a/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
@@ -486,5 +486,5 @@ Si salta una settimana per necessità del PM di redigere RBS e POS derivanti dai
 
 ## :material-account-group: **Partecipanti prossimo meeting**  
 
-- Filippo G (PM)
-- Luca (Game designer)
+- Filippo G
+- Luca
