--- a/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
@@ -14,8 +14,8 @@ Accettare o declinare il progetto
 
 ## :material-account-group: **Partecipanti**
 
-- Filippo G (PM)
-- Luca (Game designer)
+- Filippo G
+- Luca
 
 ## :material-paperclip: **Documentazione allegata**  
 
@@ -43,8 +43,8 @@ Progetto accettato
 
 Tutto il team
 
-- Filippo G (PM)
-- Silvia (Sw eng)
-- Luca (Game Designer)
-- Filippo P (Art director)
-- Anny (Sw eng)
+- Filippo G
+- Silvia
+- Luca
+- Filippo P
+- Anny
