--- a/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
@@ -1,8 +1,8 @@
 ---
-title: Meeting template
+title: Meeting 5
 ---
 
-# Meeting &lt;Data&gt; | &lt;Durata&gt;
+# Meeting 17/07/25 | 2h
 
 ## :material-target: **Scopo**
 
