feat: add notes in meeting 5

--- a/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
@@ -6,13 +6,46 @@ title: Meeting 5
 
 ## :material-target: **Scopo**
 
+Joint Project Planning Session
+
 ## :material-format-list-numbered: **Scaletta**  
+
+
 
 ## :material-account-group: **Partecipanti**  
 
 ## :material-paperclip: **Documentazione allegata**  
 
 ## :material-note-text: **Note**  
+
+Planning Session Deliverables
+I deliverables della JPPS potrebbero essere i seguenti:
+● Project Definition Statement (PDS) - di fatto il Game Design Document 
+● Work Breakdown Structure (WBS)
+● Risorse necessarie
+● Assegnamento delle risorse
+● Stima della durata delle attività
+● Project network schedule
+● Schedulazione delle attività
+● Project Notebook
+● Project proposal
+    ● Background
+    ● Objective
+    ● Overview of approach to be taken
+    ● Detailed statement of work
+    ● Time and cost summary
+    ● Appendices
+
+Prioritizzare i requirements
+Fare analisi MoSCoW
+
+WBS ha 4 mandati
+- toughts
+- architectural design
+- planning
+- project status reporting
+
+si userà la subteam approach per ottenere la WBS
 
 ## :material-check: **Decisioni prese**  
 
