feat: add all notes to the meeting

--- a/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 5 - 17-07-25.md
@@ -47,6 +47,40 @@ WBS ha 4 mandati
 
 si userà la subteam approach per ottenere la WBS
 
+Bisogna ottenere una WBS incompleta per poter garantire il fatto che si è scelto il PMLC corretto
+
+Stima del tempo + stima del lavoro -> delphi tecnique
+Stima risorse -> oggetti necessari + competenze necessarie
+Stima competenze -> skill x attività | skill x personale = attività x personale
+Stima dei costi -> cost budgeting per ogni task + cost control dopo l'esecuzione di ogni task
+            -> cashflow management
+
+Project network diagram (da cui si deriva il gantt)
+-> è il diagramma con late finish + late start + early finish + early start + slack
+
+Come costruire un Initial Dependency Diagram
+1. Per ogni task, scrivere sul Post-It il suo ID, il nome e la durata.
+2. Posizionare il Post-It sulla parte destra della lavagna (whiteboard).
+3. Posizionare lo start node sulla parte sinistra della lavagna.
+4. Muovere tutti i task senza un predecessore sulla parte sinistra della
+lavagna e collegarli allo start node.
+5. Muovere a sinistra tutti i task che si trovano sulla parte destra, ma che
+hanno tutti i predecessori già sulla sinistra e collegali con una singola
+linea ai predecessori.
+6. Ripetere il passo 5 finché tutti i task sono stati spostati a sinistra.
+
+Schedule compression technique
+Gestione della riserva -> scope bank
+
+Deliverable: proposta di progetto
+    - executive summary
+    - background
+    - objectives
+    - overview of the approach to be taken
+    - detailed statement of work
+    - time and cost summary
+    - appendices
+
 ## :material-check: **Decisioni prese**  
 
 ## :material-rocket-launch: **Azioni da fare**  
