refactor: create planning and scoping directories

--- a/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 3 - 03-07-25.md
@@ -457,12 +457,14 @@ Creare un videogioco con caratteristiche rogue like, rpg e building che permetta
 
 **PMLC**
 
-Analizzando RBS e POS il team è giunto alla conclusione che il Project Management Life Cycle che più si adatta a questo progetto è: **Iterativo**
+Analizzando RBS\* e POS\* il team è giunto alla conclusione che il Project Management Life Cycle che più si adatta a questo progetto è: **Iterativo**
 
 La scelta è dovuta ai seguenti fattori:
 
 - Obiettivi noti e stabili, ma requisiti instabili o incompleti. 
 - Necessità di apprendere mentre si implementa, approfondendo la conoscenza delle necessità degli stakeholders (prima di tutto quelle relative al team come stakeholder).
+
+\* qui per RBS e POS si intendono le versioni ancora embrionali espresse durante i meeting. La decisione del PMLC potrà subire cambiamenti una volta costruiti RBS e POS, quanto espresso sopra rappresenta quanto detto durante il meeting.
 
 ## :material-check: **Decisioni prese**  
 
