--- a/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
+++ b/docs/Allegati/Meetings/Meeting 4 - 17-07-25.md
@@ -28,9 +28,9 @@ Accettare o declinare il progetto
 Rispondere alle seguenti domande:
 
 - Quanto è importante il problema o l’opportunità per l’organizzazione? Fondamentale: primo progetto per entrare nel mercato e ufficializzare la creazione dell'azienda
-- Il “goal statement” è legato direttamente al problema/opportunità? [Si](../1%20-%20POS.md#goal)
-- Gli obiettivi sono una chiara rappresentazione del “goal statement”? [Si](../1%20-%20POS.md#obiettivi)
-- La relazione tra gli obiettivi del progetto (project objectives) e i criteri di successo (success criteria) è stabilita chiaramente? [Si](../1%20-%20POS.md#obiettivi)
+- Il “goal statement” è legato direttamente al problema/opportunità? [Si](../Scoping/1%20-%20POS.md#goal)
+- Gli obiettivi sono una chiara rappresentazione del “goal statement”? [Si](../Scoping/1%20-%20POS.md#obiettivi)
+- La relazione tra gli obiettivi del progetto (project objectives) e i criteri di successo (success criteria) è stabilita chiaramente? [Si](../Scoping/1%20-%20POS.md#obiettivi)
 
 Dato quanto riportato nel POS, che è un estratto di quanto espresso durante le riunioni di Scoping, il progetto si considera accettato. Si può quindi procedere con la fase di planning.
 
